--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/node": "^18.15.0",
 		"nodemon": "^2.0.21",
@@ -21,7 +22,10 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.11.0",
+		"@trpc/server": "^10.14.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"zod": "^3.21.4"
 	}
 }
