--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.26.1",
+    "@trpc/client": "^10.15.0",
+    "@trpc/react-query": "^10.15.0",
+    "@trpc/server": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "server": "^1.0.0"
+    "server": "^1.0.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
