--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,10 +2,9 @@
 	"name": "server",
 	"version": "1.0.0",
 	"description": "",
-	"main": "app.js",
-	"type": "module",
+	"main": "server.js",
 	"scripts": {
-		"start": "tsc -w & npx nodemon ./build/app.js",
+		"start": "tsc -w & npx nodemon ./build/server.js",
 		"build": "tsc"
 	},
 	"keywords": [],
@@ -13,7 +12,6 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.17",
 		"@types/node": "^18.15.0",
 		"nodemon": "^2.0.21",
 		"prisma": "^4.11.0",
@@ -25,7 +23,6 @@
 		"@trpc/server": "^10.14.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
 		"zod": "^3.21.4"
 	}
 }
