--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
 		"@trpc/server": "^10.15.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hot-toast": "^2.4.0",
 		"react-router-dom": "^6.9.0",
 		"server": "^1.0.0",
 		"zod": "^3.21.4"
