--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
+		"@types/express-session": "^1.17.7",
 		"@types/node": "^18.15.0",
 		"nodemon": "^2.0.21",
 		"prisma": "^4.11.0",
@@ -20,9 +21,11 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.11.0",
+		"@quixo3/prisma-session-store": "^3.1.11",
 		"@trpc/server": "^10.14.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
+		"express-session": "^1.17.3",
 		"zod": "^3.21.4"
 	}
 }
