--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/express-session": "^1.17.7",
@@ -24,6 +25,7 @@
 		"@prisma/client": "^4.11.0",
 		"@quixo3/prisma-session-store": "^3.1.11",
 		"@trpc/server": "^10.14.1",
+		"bcrypt": "^5.1.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
