--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "vite",
 		"dev": "vite",
-		"build": "tsc && vite build --watch",
+		"build": "vite build",
 		"preview": "vite preview"
 	},
 	"dependencies": {
