trying to fix vercel and vite json

--- a/packages/client/vercel.json
+++ b/packages/client/vercel.json
@@ -1,8 +1,9 @@
 {
 	"rewrites": [
-		{
-			"source": "/(.*)",
-			"destination": "/"
-		}
+	  {
+		"source": "/(?!@vite/client|@vite/env|src|favicon.ico)(.*)",
+		"destination": "/index.html"
+	  }
 	]
-}
+  }
+  
